# MashovMCP

./: .dockerignore  .gitignore  AUTHENTICATION.md  Dockerfile  LICENSE  README.md  config.py  env.example  mashov_client.py  mashov_mcp_server.py  pyproject.toml  runner.py  test_api.py  test_runner.py
.claude/skills/mashov/: SKILL.md
